--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=inventory-service
+
+server.port=8085
+
+##### POSTGRES SQL Connection ########
+spring.datasource.url=jdbc:postgresql://localhost:5432/projectOne
+spring.datasource.username=postgres
+spring.datasource.password=dinesh12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
