--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=inventory-service
 
 server.port=8085
+server.servlet.contextPath=/api/inventoryService
 
 ##### POSTGRES SQL Connection ########
 spring.datasource.url=jdbc:postgresql://localhost:5432/projectOne
